fixes font size in navigation on small resolutions

--- a/app/assets/stylesheets/application/navigation.css.scss
+++ b/app/assets/stylesheets/application/navigation.css.scss
@@ -151,7 +151,8 @@
   font-size: 18px;
 
   @media (min-width: $screen-sm-min) {
-    font-size: 15px;
+    font-size: 14px;
+    line-height: 22px;
   }
 
   @media (min-width: $screen-md-min) {
